se agregaron validaciones en variedades, cilindros ,productores y salidas de parrillas se cambio el mensaje de confirmacion al eliminar se agrego eliminacion a salidas de parrillas se corrigieron bugs en salidas de parrillas

--- a/app/views/cylinder.html
+++ b/app/views/cylinder.html
@@ -50,7 +50,7 @@
                     <tr ng-repeat="cylinder in cylinders | filter:searchCylinder">
                         <td>{{cylinder.CylinderName}}</td>
                         <td>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(cylinder.Id)">
+                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(cylinder.Id, cylinder.CylinderName)">
                                 <span class="md md-delete"></span>
                             </button>
                         </td>
