--- a/app/views/field.html
+++ b/app/views/field.html
@@ -135,7 +135,7 @@
                         <td>{{field.Box}}</td>
                         <td>{{field.Hectares}}</td>
                         <td>
-                            <button class="btn btn-icon command-delete" ng-click="confirmFieldDel(field.Id)">
+                            <button class="btn btn-icon command-delete" ng-click="confirmFieldDel(field.Id, field.FieldName)">
                         <span class="md md-delete"></span>
                     </button>
                         </td>
