--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -48,7 +48,7 @@
                                 title="Modificar">
                             <span class="md md-edit"></span>
                         </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(reception.Id)" data-toggle="tooltip" data-placement="bottom"
+                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(reception.Id, reception.Folio)" data-toggle="tooltip" data-placement="bottom"
                                 title="Eliminar">
                             <span class="md md-delete"></span>
                         </button>
