--- a/app/views/users.html
+++ b/app/views/users.html
@@ -88,7 +88,7 @@
                         <td>{{user.Role}}</td>
                         <td>
                             </button>
-                            <button class="btn btn-icon command-delete" ng-click="deleteUser(user.Id)">
+                            <button class="btn btn-icon command-delete" ng-click="confirmDeleteUser(user.Id, user.UserName)">
                         <span class="md md-delete"></span>
                     </button>
                         </td>
