--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -26,34 +26,47 @@
                 <table datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
                     <thead>
                         <tr>
-                            <th>Fecha de Captura</th>
-                            <th>Variedad</th>
-                            <th>Remisión</th>
-                            <th>Cilindro</th>
-                            <th>Folio</th>
-                            <th>Kgs. Origen</th>
-                            <th>Fecha de Proceso</th>
-                            <th>Sacos de Primera</th>
-                            <th>Kgs. de Primera</th>
-                            <th>Sacos Segunda</th>
-                            <th>Kgs. de Segunda</th>
-                            <th>Total</th>
+                            <th rowspan="2">Remisión</th>
+                            <th rowspan="2">Fecha de Captura</th>
+                            <th rowspan="2">Fecha de Proceso</th>
+                            <th rowspan="2">Variedad</th>
+                            <th rowspan="2">Huerta/s</th>
+                            <th rowspan="2">Cilindro</th>
+                            <th rowspan="2">Folio</th>
+                            <th rowspan="2">Kgs. Origen</th>
+                            <th rowspan="2">Sacos de Primera</th>
+                            <th rowspan="2">Kgs. de Primera</th>
+                            <th rowspan="2">Sacos Segunda</th>
+                            <th rowspan="2">Kgs. de Segunda</th>
+                            <th rowspan="2">Total</th>
+                            <th colspan="3">Sacos de Primera</th>
+                            <th rowspan="2">Total</th>
+                        </tr>
+                        <tr>
+                            <th>Chica</th>
+                            <th>Mediana</th>
+                            <th>Grande</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr ng-repeat="report in producerReport">
-                            <td>{{report.DateReceptionCapture | date:'dd/MM/yyyy HH:mm'}}</td>
-                            <td>{{report.Variety}}</td>
                             <td>{{report.Remission}}</td>
+                            <td>{{report.DateReceptionCapture | date:'dd/MM/yyyy HH:mm'}}</td>
+                            <td>{{report.ProcessDate | date:'dd/MM/yyyy HH:mm'}}</td>
+                            <td>{{report.Variety}}</td>
+                            <td>{{report.Batch}}</td>
                             <td>{{report.Cylinder}}</td>
                             <td>{{report.Folio}}</td>
                             <td>{{report.KgsOrigen}}</td>
-                            <td>{{report.ProcessDate | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td>{{report.SacksP}}</td>
                             <td>{{report.KilosFirst}}</td>
                             <td>{{report.SacksS}}</td>
                             <td>{{report.KilosSecond}}</td>
                             <td>{{report.KilosTotal}}</td>
+                            <td>{{report.SacksFirstSmall}}</td>
+                            <td>{{report.SacksFirstMedium}}</td>
+                            <td>{{report.SacksFirstLarge}}</td>
+                            <td>{{report.SacksFirstTotal}}</td>
                         </tr>
                     </tbody>
                 </table>
