--- a/app/views/sampling/samplingReceptionManage.html
+++ b/app/views/sampling/samplingReceptionManage.html
@@ -52,7 +52,7 @@
                             <button class="btn btn-icon command-edit" ng-click="redirectUpdate(sampling)">
                         <span class="md md-edit"></span>
                     </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(sampling.Id)">
+                            <button class="btn btn-icon command-delete" ng-click="confirmationDeleteReception(sampling.Id)">
                         <span class="md md-delete"></span>
                     </button>
                         </td>
