--- a/app/views/remission/remissionAdd.html
+++ b/app/views/remission/remissionAdd.html
@@ -28,10 +28,20 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="remissionFolio" class="col-sm-2 control-label">Folio de Remisión *</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line">
+                            <input required type="number" min="1" name="RemissionFolio" class="form-control input-sm" id="remissionFolio" placeholder="No. de remisión" data-ng-model="remission.RemissionFolio">
+                            <small class="help-block has-error" style="color:red" ng-show="remissionForm.RemissionFolio.$error.number">Numero no valido.</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="remissionFieldD" class="col-sm-2 control-label">Campo *</label>
                     <div class="col-sm-10">
                         <div class="fg-line select">
-                            <select id="remissionFieldD" class="form-control" ng-model="remission.Field" ng-options="remission.FieldName for remission in fields" ng-change="getBatchInCurrentField(remission.Field)"></select>
+                            <select id="remissionFieldD" class="form-control" ng-model="remission.Field" ng-options="remission.FieldName for remission in fields"
+                                ng-change="getBatchInCurrentField(remission.Field)"></select>
                         </div>
                     </div>
                 </div>
@@ -39,7 +49,8 @@
                     <label for="remissionBatchD" class="col-sm-2 control-label">Huerta/Lote *</label>
                     <div class="col-sm-10">
                         <div class="fg-line select">
-                            <select id="remissionBatchD" class="form-control" ng-model="remission.Batch" ng-options="remission.Batch for remission in batches" ng-change="getBoxesInCurrentBatch(remission.Batch)"></select>
+                            <select id="remissionBatchD" class="form-control" ng-model="remission.Batch" ng-options="remission.Batch for remission in batches"
+                                ng-change="getBoxesInCurrentBatch(remission.Batch)"></select>
                         </div>
                     </div>
                 </div>
@@ -55,7 +66,7 @@
                     <label for="quantity" class="col-sm-2 control-label">Cantidad en Kilos*</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input type="number" min="1" name="Quantity" class="form-control input-sm" id="quantity" placeholder="cantidad" data-ng-model="remission.Quantity">
+                            <input required type="number" min="1" name="Quantity" class="form-control input-sm" id="quantity" placeholder="cantidad" data-ng-model="remission.Quantity">
                             <small class="help-block has-error" style="color:red" ng-show="remissionForm.Quantity.$error.number">Numero no valido.</small>
                         </div>
                     </div>
