--- a/app/views/report/grill/grillIssues.html
+++ b/app/views/report/grill/grillIssues.html
@@ -3,8 +3,10 @@
         <div class="card-header">
             <h2>{{title}}</h2>
         </div>
-        <div class="card-body table-responsive">
-            <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered"></table>
+        <div class="card-body card-padding">
+            <div class="table-responsive">
+                <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance" class="table table-striped table-bordered"></table>
+            </div>
         </div>
     </div>
 </div>
