--- a/app/views/sampling/samplingReceptionManage.html
+++ b/app/views/sampling/samplingReceptionManage.html
@@ -18,6 +18,7 @@
                 <thead>
                     <tr>
                         <th>Folios</th>
+                        <th>Variedad</th>
                         <th>Fecha</th>
                         <th>Peso</th>
                         <th>Porciento de Humedad</th>
@@ -36,6 +37,7 @@
                 <tbody>
                     <tr ng-repeat="sampling in samplings | filter:searchUser">
                         <td>{{sampling.Folio}}</td>
+                        <td>{{sampling.Variety}}</td>
                         <td>{{sampling.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{sampling.SampleWeight}}</td>
                         <td>{{sampling.HumidityPercent}}</td>
