--- a/app/views/report/genericReport.html
+++ b/app/views/report/genericReport.html
@@ -4,8 +4,69 @@
             <h2>{{title}}</h2>
         </div>
         <div class="card-body card-padding">
+            <div class="row">
+                <div class="col-sm-12 actionbar">
+                    <div class="form-group">
+                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                        <div class="col-sm-12">
+                            <div class="fg-line">
+                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchGrillReport">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <button class="btn btn-link" ng-click="GrillExportPdf()">
+                    <span class="glyphicon glyphicon-share"></span> Exportar PDF
+            </button>
+            <button class="btn btn-link" ng-click="ExportExcel()">
+                    <span class="glyphicon glyphicon-share"></span> Exportar Excel
+            </button>
+            <button class="btn btn-link" value="select genericReport" ng-click="CopyToClipBoard(document.getElementById('genericReport'))">
+                    <span class="glyphicon glyphicon-share"></span> Copiar
+            </button>
             <div class="table-responsive">
-                <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered"></table>
+                <table id="genericReport" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>No. Parrilla</th>
+                            <th>Fecha de Captura</th>
+                            <th>Folios</th>
+                            <th>Tamaño</th>
+                            <th>Sacos</th>
+                            <th>Kilos</th>
+                            <th>Calidad</th>
+                            <th>Variedad</th>
+                            <th>Productor</th>
+                            <th>Campo</th>
+                            <th>Peso</th>
+                            <th>% Humedad</th>
+                            <th>No. Nueces</th>
+                            <th>Rendimiento</th>
+                            <th>Total de nueces comestibles</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="grill in genericGrillReport | filter:searchGrillReport">
+                            <td>{{grill.Id}}</td>
+                            <td>{{grill.DateCapture}}</td>
+                            <td>{{grill.Receptions}}</td>
+                            <td>{{grill.Size}}</td>
+                            <td>{{grill.Sacks}}</td>
+                            <td>{{grill.Kilos}}</td>
+                            <td>{{grill.Quality}}</td>
+                            <td>{{grill.Variety}}</td>
+                            <td>{{grill.Producer}}</td>
+                            <td>{{grill.FieldName}}</td>
+                            <td>{{grill.SampleWeight}}</td>
+                            <td>{{grill.HumidityPercent}}</td>
+                            <td>{{grill.WalnutNumber}}</td>
+                            <td>{{grill.Performance}}</td>
+                            <td>{{grill.TotalWeightOfEdibleNuts}}</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
