--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -10,7 +10,7 @@
                 <button class="btn btn-link" ng-click="exportToExcel('#tableId')">
                     <span class="glyphicon glyphicon-share"></span> Export to Excel
                 </button>
-                <table id="tableId" class="table table-striped table-bordered">
+                <table id="tableId" class="table table-bordered">
                     <thead>
                         <tr>
                             <th>No. de Parrilla</th>
