--- a/app/views/processResult/processResultManage.html
+++ b/app/views/processResult/processResultManage.html
@@ -1,7 +1,7 @@
 <div class="animated bounceInRight">
     <div class="card">
         <div class="card-header">
-            <h2>Muestreos (Recepciones)</h2>
+            <h2>Resultado de Proceso (Recepciones)</h2>
         </div>
         <div class="card-body table-responsive">
             <div class="col-sm-12 actionbar">
@@ -54,7 +54,7 @@
                             <button class="btn btn-icon command-edit" ng-click="redirectUpdate(sampling)">
                         <span class="md md-edit"></span>
                     </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDeleteReception(sampling.Id)">
+                            <button class="btn btn-icon command-delete" ng-click="confirmationDeleteReception(sampling.Id, sampling.Folio)">
                         <span class="md md-delete"></span>
                     </button>
                         </td>
