--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -5,8 +5,12 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
-                <button ng-click="ExportExcel()">Importar a Excel</button>
-                <button ng-click="ExportPdf()">Importar a Pdf</button>
+                <button class="btn btn-link" ng-click="ExportExcel()">
+                    <span class="glyphicon glyphicon-share"></span> Importar a Excel
+                </button>
+                <button class="btn btn-link" ng-click="ExportPdf()">
+                    <span class="glyphicon glyphicon-share"></span> Importar a Pdf
+                </button>
                 <button class="btn btn-link" ng-click="exportToExcel('#tableId')">
                     <span class="glyphicon glyphicon-share"></span> Export to Excel
                 </button>
