reporte PDF de campos registrados

--- a/app/views/field.html
+++ b/app/views/field.html
@@ -118,7 +118,11 @@
                     </div>
                 </div>
             </div>
-            <table class="table table-striped table-vmiddle">
+            <hr>
+            <button class="btn btn-link" ng-click="generatePDF()">
+                <span class="glyphicon glyphicon-share"></span>Exportar PDF
+            </button>
+            <table id="fieldTable" class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
                         <th>Campo</th>
