--- a/app/views/cylinder.html
+++ b/app/views/cylinder.html
@@ -38,7 +38,11 @@
                     </div>
                 </div>
             </div>
-            <table class="table table-striped table-vmiddle">
+            <hr>
+            <button class="btn btn-link" ng-click="generatePDF()">
+                <span class="glyphicon glyphicon-share"></span>Exportar PDF
+            </button>
+            <table id="cylinderTable" class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
                         <th>Cilindro</th>
