--- a/app/views/humidity/humidityManage.html
+++ b/app/views/humidity/humidityManage.html
@@ -13,6 +13,10 @@
                     </div>
                 </div>
             </div>
+            <hr>
+            <button class="btn btn-link" ng-click="generatePDF()">
+                <span class="glyphicon glyphicon-share"></span>Exportar PDF
+            </button>
             <table id="data-table-command" class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
