--- a/app/views/sampling/samplingGrillManage.html
+++ b/app/views/sampling/samplingGrillManage.html
@@ -14,7 +14,11 @@
                     </div>
                 </div>
             </div>
-            <table class="table table-striped table-vmiddle">
+            <hr>
+            <button class="btn btn-link" ng-click="generatePDF()">
+                <span class="glyphicon glyphicon-share"></span>Exportar PDF
+            </button>
+            <table id="samplingGrillTable" class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
                         <th>No. de Parrilla</th>
