--- a/app/views/users.html
+++ b/app/views/users.html
@@ -74,11 +74,15 @@
                     </div>
                 </div>
             </div>
-            <table class="table table-striped table-vmiddle">
+            <hr>
+            <button class="btn btn-link" ng-click="generatePDF()">
+                <span class="glyphicon glyphicon-share"></span>Exportar PDF
+            </button>
+            <table id="userTable" class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
                         <th data-column-id="id">Nombre</th>
-                        <th data-column-id="role">Role</th>
+                        <th data-column-id="role">Rol</th>
                         <th data-column-id="commands">Opciones</th>
                     </tr>
                 </thead>
