Se agregan pdfs a reportes y se quitan datatables

--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -57,7 +57,7 @@
                             <span class="md md-delete"></span>
                         </button>
                             <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(reception.Folio, reception.Id)" data-toggle="tooltip"
-                                data-placement="bottom" title="Asignar resepcion a parrilla">
+                                data-placement="bottom" title="Asignar recepcion a parrilla">
                             <span class="md md-view-module"></span>
                         </button>
                             <button class="btn btn-icon command-edit" ng-click="redirectAddRemission(reception.Folio)" data-toggle="tooltip"
