--- a/app/views/processResult/processResultManage.html
+++ b/app/views/processResult/processResultManage.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <hr>
-            <button class="btn btn-link" ng-click="generatePDFReceptions()">
+            <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
             <table id="SamplingReceptionTable" class="table table-striped table-vmiddle">
