--- a/app/views/report/dailyReport.html
+++ b/app/views/report/dailyReport.html
@@ -32,7 +32,17 @@
             <h2>Reporte Diario de Proceso</h2>
         </div>
         <div class="card-body table-responsive ">
-            <table id="daily" datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
+            <hr>
+            <button class="btn btn-link" ng-click="dailyExportPdf()">
+                    <span class="glyphicon glyphicon-share"></span> Exportar PDF
+            </button>
+            <button class="btn btn-link" ng-click="ExportExcel()">
+                    <span class="glyphicon glyphicon-share"></span> Exportar Excel
+            </button>
+            <button class="btn btn-link" value="select genericReport" ng-click="CopyToClipBoard(document.getElementById('genericReport'))">
+                    <span class="glyphicon glyphicon-share"></span> Copiar
+            </button>
+            <table id="daily" class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         <th>Fecha</th>
