--- a/app/views/report/grill/reportingProcess.html
+++ b/app/views/report/grill/reportingProcess.html
@@ -5,27 +5,33 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
-                <table datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
+            <hr>
+            <button class="btn btn-link" ng-click="reportingProcessExportPdf()">
+                    <span class="glyphicon glyphicon-share"></span> Exportar PDF
+            </button>
+            <button class="btn btn-link" ng-click="ExportExcel()">
+                    <span class="glyphicon glyphicon-share"></span> Exportar Excel
+            </button>
+            <button class="btn btn-link" value="select genericReport" ng-click="CopyToClipBoard(document.getElementById('reportingProcess'))">
+                    <span class="glyphicon glyphicon-share"></span> Copiar
+            </button>
+                <table id="reportingProcess" class="table table-striped table-bordered">
                     <thead>
                         <tr>
-                            <th rowspan="2">Variedad</th>
-                            <th colspan="3">Sacos de Primera</th>
-                            <th colspan="3">Kgs. de Primera</th>
-                            <th rowspan="2">Total Kgs. Primera</th>
-                            <th rowspan="2">Total Kgs. Segunda</th>
-                            <th rowspan="2">Total Kgs. Tercera</th>
-                            <th rowspan="2">% 1ra</th>
-                            <th rowspan="2">% 2da</th>
-                            <th rowspan="2">% 3ra</th>
-                            <th rowspan="2">Kilos Totales</th>
-                        </tr>
-                        <tr>
+                            <th>Variedad</th>
                             <th>Chicas</th>
                             <th>Medianas</th>
                             <th>Grandes</th>
-                            <th>CH</th>
-                            <th>M</th>
-                            <th>G</th>
+                            <th>CH (Kg)</th>
+                            <th>M (Kg)</th>
+                            <th>G (Kg)</th>
+                            <th>Total Kgs. Primera</th>
+                            <th>Total Kgs. Segunda</th>
+                            <th>Total Kgs. Tercera</th>
+                            <th>% 1ra</th>
+                            <th>% 2da</th>
+                            <th>% 3ra</th>
+                            <th>Kilos Totales</th>
                         </tr>
                     </thead>
                     <tbody>
