--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -5,7 +5,17 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
-                <table datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
+                <hr>
+                <button class="btn btn-link" ng-click="originReportExportPdf()">
+                    <span class="glyphicon glyphicon-share"></span> Exportar PDF
+                </button>
+                <button class="btn btn-link" ng-click="getExcel()">
+                    <span class="glyphicon glyphicon-share"></span> Exportar Excel
+                </button>
+                <button class="btn btn-link" value="select genericReport" ng-click="CopyToClipBoard('#originReportTable')">
+                    <span class="glyphicon glyphicon-share"></span> Copiar
+                </button>
+                <table id="originReportTable" class="table table-striped table-bordered">
                     <thead>
                         <tr>
                             <th>Huerta</th>
