--- a/app/views/report/grill/secondGrillCurrentInv.html
+++ b/app/views/report/grill/secondGrillCurrentInv.html
@@ -46,9 +46,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="grill in genericGrillReport | filter:searchGrillReport">
+                        <tr ng-repeat="grill in secondCurrentInventory | filter:searchGrillReport">
                             <td>{{grill.Id}}</td>
-                            <td>{{grill.DateCapture}}</td>
+                            <td>{{grill.DateCapture | date:'dd/MM/yyyy'}}</td>
                             <td>{{grill.Receptions}}</td>
                             <td>{{grill.Sacks}}</td>
                             <td>{{grill.Kilos}}</td>
