se agrego grafica de parrillas y grafica de cilindros ocupados

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,14 +11,14 @@
     </div>
     <div class="col-sm-4">
         <div class="card">
-            <div></div>
+            <div id="grillIssuesAndInventory"></div>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-sm-4">
         <div class="card">
-            <div id=""></div>
+            <div id="cylinderOccupiedHours"></div>
         </div>
     </div>
     <div class="col-sm-4">
