--- a/app/views/report/dailyReport.html
+++ b/app/views/report/dailyReport.html
@@ -36,11 +36,8 @@
             <button class="btn btn-link" ng-click="dailyExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar PDF
             </button>
-            <button class="btn btn-link" ng-click="ExportExcel()">
-                    <span class="glyphicon glyphicon-share"></span> Exportar Excel
-            </button>
-            <button class="btn btn-link" value="select genericReport" ng-click="CopyToClipBoard(document.getElementById('genericReport'))">
-                    <span class="glyphicon glyphicon-share"></span> Copiar
+            <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('daily'))">
+                    <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
             <table id="daily" class="table table-striped table-bordered">
                 <thead>
