--- a/app/views/report/grill/reportingProcess.html
+++ b/app/views/report/grill/reportingProcess.html
@@ -9,11 +9,8 @@
             <button class="btn btn-link" ng-click="reportingProcessExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar PDF
             </button>
-            <button class="btn btn-link" ng-click="ExportExcel()">
-                    <span class="glyphicon glyphicon-share"></span> Exportar Excel
-            </button>
-            <button class="btn btn-link" value="select genericReport" ng-click="CopyToClipBoard(document.getElementById('reportingProcess'))">
-                    <span class="glyphicon glyphicon-share"></span> Copiar
+            <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('reportingProcess'))">
+                    <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
                 <table id="reportingProcess" class="table table-striped table-bordered">
                     <thead>
