--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -9,11 +9,8 @@
                 <button class="btn btn-link" ng-click="originReportExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar PDF
                 </button>
-                <button class="btn btn-link" ng-click="getExcel()">
-                    <span class="glyphicon glyphicon-share"></span> Exportar Excel
-                </button>
-                <button class="btn btn-link" value="select genericReport" ng-click="CopyToClipBoard('#originReportTable')">
-                    <span class="glyphicon glyphicon-share"></span> Copiar
+                <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('originReportTable'))">
+                    <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
                 <table id="originReportTable" class="table table-striped table-bordered">
                     <thead>
