se agrego grafica de numero de nueces promedio por variedad

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-sm-4">
         <div class="card">
-            <div id="acumulatedByProducer"></div>
+            <div id="averageNumberOfNuts"></div>
         </div>
     </div>
     <div class="col-sm-4">
@@ -28,7 +28,7 @@
     </div>
     <div class="col-sm-4">
         <div class="card">
-            <div></div>
+            <div id="acumulatedByProducer"></div>
         </div>
     </div>
 </div>
